BitFields - additional refinements